After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782580 - ctags-builder: fix memory leak
ctags-builder: fix memory leak
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-13 02:38 UTC by Mohammed Sadiq
Modified: 2017-05-18 02:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ctags-builder: fix memory leak (1.07 KB, patch)
2017-05-13 02:38 UTC, Mohammed Sadiq
none Details | Review
ctags-builder: fix memory leak (1.07 KB, patch)
2017-05-13 17:01 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-05-13 02:38:28 UTC
.
Comment 1 Mohammed Sadiq 2017-05-13 02:38:35 UTC
Created attachment 351767 [details] [review]
ctags-builder: fix memory leak
Comment 2 Christian Hergert 2017-05-13 03:27:43 UTC
Review of attachment 351767 [details] [review]:

Quick fix and then good to go

::: plugins/ctags/ide-ctags-builder.c
@@ +250,3 @@
   IdeCtagsBuilder *self = source_object;
   const gchar *ctags;
+  g_autofree gchar *program;

Always assign g_autofree and g_autoptr() locals to NULL
Comment 3 Mohammed Sadiq 2017-05-13 17:01:21 UTC
Created attachment 351784 [details] [review]
ctags-builder: fix memory leak
Comment 4 Christian Hergert 2017-05-18 02:37:12 UTC
Thanks!

Attachment 351784 [details] pushed as 4fce29c - ctags-builder: fix memory leak