ctags-builder: fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=782580